--- a/frosti.config.yaml
+++ b/frosti.config.yaml
@@ -9,7 +9,7 @@ site:
     light: nord # 主题的浅色模式
     dark: sunset # 主题的深色模式
     code: github-dark # 代码块的主题 https://shiki.style/themes
-  date_format: ddd MMM DD YYYY # 日期格式设置，支持自定义格式
+  date_format: YYYY MM DD ddd # 日期格式设置，支持自定义格式，有关更多信息请查看 https://day.js.org/docs/en/display/format
   blog: # 博客相关配置
     pageSize: 8 # 每页显示的文章数量
   menu: # 菜单配置
